--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\CodeBook\\CropDis\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.tools import BaseTool\n",
     "from transformers import BlipProcessor, BlipForConditionalGeneration, DetrImageProcessor, DetrForObjectDetection\n",
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,11 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Debanjan\\AppData\\Local\\Temp\\ipykernel_27644\\3271607266.py:6: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  conversational_memory = ConversationBufferWindowMemory(\n",
+      "C:\\Users\\Debanjan\\AppData\\Local\\Temp\\ipykernel_27644\\3271607266.py:14: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
+      "  agent = initialize_agent(\n"
+     ]
+    }
+   ],
    "source": [
     "from getpass import getpass\n",
+    "msg = \"tell me what disease can this  be ?\"\n",
     "#initialize the gent\n",
     "tools = [ImageCaptionTool(), ObjectDetectionTool()]\n",
     "\n",
@@ -216,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,18 +257,18 @@
       "Thought:\u001b[32;1m\u001b[1;3m```json\n",
       "{\n",
       "    \"action\": \"Final Answer\",\n",
-      "    \"action_input\": \"Based on the image description, it appears to be a scene from a classroom, and there is no visible indication of a disease. If you could provide more context or information, I would be happy to try and assist you further.\"\n",
+      "    \"action_input\": \"There is no indication of a specific disease in the provided image. It appears to be a normal classroom scene with students and a teacher. If you can provide more context or information, I'll do my best to help.\"\n",
       "}\n",
       "```\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'input': 'tell me what disease can this  be ?, this is the image path: images (1).jpg', 'chat_history': [], 'output': 'Based on the image description, it appears to be a scene from a classroom, and there is no visible indication of a disease. If you could provide more context or information, I would be happy to try and assist you further.'}\n"
+      "{'input': 'tell me what disease can this  be ?, this is the image path: images (1).jpg', 'chat_history': [], 'output': \"There is no indication of a specific disease in the provided image. It appears to be a normal classroom scene with students and a teacher. If you can provide more context or information, I'll do my best to help.\"}\n"
      ]
     }
    ],
    "source": [
     "image_path = \"images (1).jpg\"\n",
-    "user_question = \"tell me what disease can this  be ?\"\n",
+    "user_question = msg\n",
     "response = agent.invoke(f'{user_question}, this is the image path: {image_path}')\n",
     "print(response)"
    ]
